syntax = "proto3";

package grpc.user.v1;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
}

message CreateUserRequest {
  string email = 1;
  string name = 2;
  string lastname = 3;
  optional string token = 4;
  optional int32 countryId = 5;
  optional string lap = 9;
  optional bool isVerified = 10;
  repeated int32 roles = 11; 
}

message CreateUserResponse {
  User user = 1;
  google.protobuf.StringValue description = 2;
}

message GetUserRequest {
  google.protobuf.Int64Value user_id = 1;
  // oneof user { 
  //   google.protobuf.Int64Value user_id = 1;
  //   google.protobuf.StringValue email = 2;
  // }
}

message GetUserResponse {
  User user = 1;
  google.protobuf.StringValue description = 2;
}

message GetAllUsersRequest {
  int32 page = 1;
  int32 pageSize = 2;
  optional string search = 3;
  optional bool isBlocked = 4;
  optional bool isHidden = 5;
  optional bool isDeleted = 6;
  optional bool isVerified = 7;
}

message GetAllUsersResponse {
  repeated User rows = 1;
  int32 totalCount = 2;
  int32 currentPage = 3;
  int32 totalPages = 4;
  google.protobuf.StringValue description = 5;
}

message UpdateUserRequest {
  int32 id = 1;
  optional string email = 2;
  optional string name = 3;
  optional string lastname = 4;
  optional string token = 5;
  optional int32 countryId = 6;
  optional bool isDeleted = 7;
  optional bool isBlocked = 8;
  optional bool isHidden = 9;
  optional string lastIp = 10;
  optional bool isVerified = 11;
  repeated int32 roles = 12;
}

message UpdateUserResponse {
  User user = 1;
  google.protobuf.StringValue description = 2;
}

message User {
  int64 id = 1;
  string email = 2;
  string name = 3;
  string lastname = 4;
  google.protobuf.StringValue token = 5;
  string cca3 = 6;
  google.protobuf.Timestamp is_blocked = 8;
  google.protobuf.Timestamp is_hidden = 9;
  google.protobuf.Timestamp is_verified = 11;
  string last_ip = 10;
  google.protobuf.Timestamp created_at = 12;
  repeated Role roles = 13;
}

message Role {
  int64 id = 1;
  google.protobuf.StringValue title = 2;
}

